--- a/index.html
+++ b/index.html
@@ -21,8 +21,13 @@
   </section>
 
   <section class="main">
-    <a href="https://gedonstore.000webhostapp.com/" target="_blank"><button class="visit" role="button">VISIT GEDON STORE</button></a>
+    <a href="https://gedonstore.000webhostapp.com/" target="_blank"><button class="btn-visit" role="button">VISIT GEDON STORE</button></a>
   </section>
+
+  <section class="laporan">
+    <a href="images/laporan.pdf" target="_blank"><button class="btn-download" role="button">DOWNLOAD LAPORAN</button></a>
+  </section>
+
 
   <section class="text">
     <h2>TUGAS MATA KULIAH<br>E - COMMERCE</h2>
