--- a/index.html
+++ b/index.html
@@ -220,7 +220,7 @@
 
           <div class="flex w-1/2 justify-end content-center">
             <a
-              class="inline-block text-blue-300 no-underline hover:text-indigo-800 hover:text-underline text-center h-10 p-2 md:h-auto"
+              class="inline-block text-blue-300 no-underline hover:text-indigo-800 hover:text-underline text-center h-10 p-2"
               data-tippy-content="Github"
               href="https://github.com/"
             >
@@ -236,7 +236,7 @@
             </a>
 
             <a
-              class="inline-block text-blue-300 no-underline hover:text-indigo-800 hover:text-underline text-center h-10 p-2 md:h-auto"
+              class="inline-block text-blue-300 no-underline hover:text-indigo-800 hover:text-underline text-center h-10 md:h-auto"
               data-tippy-content="Instagram"
               href="https://www.instagram.com/?hl=id"
             >
