--- a/index.html
+++ b/index.html
@@ -220,7 +220,7 @@
 
           <div class="flex w-1/2 justify-end content-center">
             <a
-              class="inline-block text-blue-300 no-underline hover:text-indigo-800 hover:text-underline text-center h-10 p-2"
+              class="inline-block text-blue-300 no-underline hover:text-indigo-800 hover:text-underline text-center h-10 p-2 md:h-auto md:p-1"
               data-tippy-content="Github"
               href="https://github.com/"
             >
@@ -236,7 +236,7 @@
             </a>
 
             <a
-              class="inline-block text-blue-300 no-underline hover:text-indigo-800 hover:text-underline text-center h-10 p-2"
+              class="inline-block text-blue-300 no-underline hover:text-indigo-800 hover:text-underline text-center h-10 p-2 md:h-auto md:p-1"
               data-tippy-content="Instagram"
               href="https://www.instagram.com/?hl=id"
             >
@@ -252,7 +252,7 @@
             </a>
 
             <a
-              class="inline-block text-blue-300 no-underline hover:text-indigo-800 hover:text-underline text-center h-10 p-2"
+              class="inline-block text-blue-300 no-underline hover:text-indigo-800 hover:text-underline text-center h-10 p-2 md:h-auto md:p-1"
               data-tippy-content="Twitter"
               href="https://twitter.com/"
             >
@@ -267,7 +267,7 @@
               </svg>
             </a>
             <a
-              class="inline-block text-blue-300 no-underline hover:text-indigo-800 hover:text-underline text-center h-10 p-2"
+              class="inline-block text-blue-300 no-underline hover:text-indigo-800 hover:text-underline text-center h-10 p-2 md:h-auto md:p-1"
               data-tippy-content="Facebook"
               href="https://web.facebook.com/?_rdc=1&_rdr"
             >
