--- a/index.html
+++ b/index.html
@@ -267,7 +267,7 @@
               </svg>
             </a>
             <a
-              class="inline-block text-blue-300 no-underline hover:text-indigo-800 hover:text-underline text-center h-10 p-2 md:h-auto md:p-4"
+              class="inline-block text-blue-300 no-underline hover:text-indigo-800 hover:text-underline text-center h-10 md:h-auto md:p-4"
               data-tippy-content="Facebook"
               href="https://web.facebook.com/?_rdc=1&_rdr"
             >
